--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseAuth">
-        <activity android:name=".SigninActivity"></activity>
+        <activity
+            android:name=".SinglePlayerActivity"
+            android:exported="true"
+            android:configChanges="orientation"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".SigninActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
